# oqyoqy_try1

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
src/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/migrations/: 0001_initial.py  0002_alter_course_students_alter_lesson_number_and_more.py  0003_alter_customuser_is_student_and_more.py  0004_customuser_created_by.py  0005_alter_course_students.py
