[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mindoolla1289 <mindoolla1289@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-ckeditor = "^6.5.1"
psycopg2 = "^2.9.5"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
